# amazon_sp

./: .gitignore  __init__.py  all_orders_report.py  authentication.py  connection.py  image_links.py  image_update.py  pyproject.toml  requirements.txt  schema.json  setup.py  telegram_notifier.py
base/: __init__.py  authentication.py  rate_limits.py
catalog_items/: catalog.py
listings/: listings.py
reports/: __init__.py  all_orders.py  all_orders_report.py  process_reports.py  report_init.py  report_types.py  search_catalog_performance.py  temp.py
scripts/: brand_analytics.py  image_update.py  sqp_reports.py
sp_utils/: __init__.py  sp_utils.py  telegram_notifier.py
