[project]
name = "amazon-sp"
version = "0.1.5"
description = "Amazon SP API helper modules"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiolimiter>=1.2.1",
    "google-auth>=2.47.0",
    "google-cloud-bigquery>=3.40.0",
    "google-cloud-bigquery-storage>=2.36.1",
    "httpx>=0.27.2",
    "openpyxl>=3.1.5",
    "pandas<3.0",
    "pandas-gbq>=0.31.0",
    "python-amazon-sp-api>=2.0.7",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
]

[tool.setuptools]
packages = ["base", "reports", "sp_utils"]
py-modules = ["connection"]

[dependency-groups]
dev = [
    "ipython>=9.10.0",
]
